fixed so play button doesnt hide behind the gradient and is uncklickable

--- a/src/css/movieDetails.css
+++ b/src/css/movieDetails.css
@@ -36,10 +36,12 @@ header {
 
 .button-container {
   display: flex;
+  position: relative;
   align-items: center;
   justify-content: center;
   margin: auto;
   transform: translateY(-250px);
+  z-index: 3;
 }
 
 .trailer-button {
